--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     </section>
   </main>
 
-  <footer class="footer">Made for campus communities • Uses LocalStorage • <a href="list.html">See items</a></footer>
+  <footer class="footer">Made for campus communities • Uses LocalStorage • <a href="list.html">See items</a>
+  <p>Created with ❤️ by Harshit</p>
+</footer>
   <script src="script.js"></script>
 </body>
 </html>
