--- a/list.html
+++ b/list.html
@@ -72,7 +72,8 @@
     <p id="emptyState" class="empty-state" hidden>No items yet. Be the first to <a href="lost.html">report a lost item</a> or <a href="found.html">report a found item</a>.</p>
   </main>
 
-  <footer class="footer">Tip: Use the search bar and filters to narrow results.</footer>
-  <script src="script.js"></script>
+  <footer class="footer">Tip: Use the search bar and filters to narrow results.
+  <p>Created with ❤️ by [Your Name]</p>
+  </footer>  <script src="script.js"></script>
 </body>
 </html>
