--- a/lost.html
+++ b/lost.html
@@ -77,7 +77,9 @@
     </form>
   </main>
 
-  <footer class="footer">Data is stored locally in your browser.</footer>
+  <footer class="footer">Data is stored locally in your browser.
+  <p>Created with ❤️ by Harshit.</p>
+</footer>
   <script src="script.js"></script>
 </body>
 </html>
