--- a/list.html
+++ b/list.html
@@ -73,7 +73,8 @@
   </main>
 
   <footer class="footer">Tip: Use the search bar and filters to narrow results.
-  <p>Created with ❤️ by [Your Name]</p>
-  </footer>  <script src="script.js"></script>
+  <p>Created with ❤️ by Harshit.</p>
+  </footer>  
+  <script src="script.js"></script>
 </body>
 </html>
