--- a/found.html
+++ b/found.html
@@ -77,7 +77,7 @@
     </form>
   </main>
 
-  <footer class="footer">Thank you for helping your community!</footer>
+  <footer class="footer">Thank you for helping your community!<p>Created with ❤️ by Harshit.</p></footer>
   <script src="script.js"></script>
 </body>
 </html>
